--- a/_data/team.yml
+++ b/_data/team.yml
@@ -117,113 +117,96 @@
   multiple: true
   text: If something is important enough, you do it even if the odds aren't in your favour <br> - Elon Musk
   heads:
-      - name: Vaibhav<br>Kashera
-        bg: green
-        img: Vaibhav_2020.jpg
-        fb: https://www.facebook.com/Vkashera1
-        in: https://www.linkedin.com/in/vaibhav-kashera-788256188
-        mail: vaibhav.kashera@research.iiit.ac.in
-        phone: 8340647358
-  members:
-      - name: Pooja<br>Desur
-        img: Pooja_2020.jpeg
-        fb: https://www.facebook.com/profile.php?id=100009894364010
-        in: https://www.linkedin.com/in/pooja-desur-7a42271ab
-        mail: pooja.desur@students.iiit.ac.in
-        bg: grey
       - name: Tanmay<br>Goyal
-        bg: grey
         img: Tanmay_Goyal.jpeg
-        fb: https://www.facebook.com/tanmay.goyal.378
-        in: https://www.linkedin.com/in/tanmay-goyal-764a5118b/
         mail: tanmay.g@research.iiit.ac.in
+        bg: grey
+        phone: 8879184756
       - name: Anurag<br>Gupta
-        bg: green
         img: Anurag_Gupta.jpg
-        fb: https://www.facebook.com/Anuraggupta.ag1
-        in: https://www.linkedin.com/in/anurag-g-054128110/
         mail: anurag.g@students.iiit.ac.in
+        bg: grey
+        phone: 9988908673
+  members:
       - name: Atharva<br>Joshi
-        bg: grey
         img: Atharva_Joshi.jpg
-        in: linkedin.com/in/atharva-joshi-a99766207
         mail: atharva.j@research.iiit.ac.in
-      - name: Naimeesh<br>Narayan Tiwari
         bg: green
+      - name: Naimeesh<br>Narayan Tiwari
         img: NAIMEESH_TIWARI.jpg
-        fb: https://www.facebook.com/naimeesh.nt
-        in: http://www.linkedin.com/in/naimeesh-narayan-tiwari-363483207
         mail: naimeesh.tiwari@students.iiit.ac.in
+        bg: green
       - name: Gautam<br>Ghai
-        bg: grey
         img: Gautam_Ghai.jpg
-        fb: https://www.facebook.com/gautam.ghai.1004
-        in: https://www.linkedin.com/in/gautam-ghai-079439207
         mail: gautam.ghai@students.iiit.ac.in
-
+        bg: green
+      - name: Suyash<br>Sethia
+        img: Suyash_Sethia.jpg
+        mail: suyash.sethia@research.iiit.ac.in
+        bg: green
+      - name: Adyansh<br>Kakran
+        img: Adyansh_Kakran.jpg
+        mail: adyansh.kakran@research.iiit.ac.in
+        bg: green
+      - name: Rohan<br>Girish
+        img: Rohan_Girish.jpg
+        mail: rohan.girish@students.iiit.ac.in
+        bg: green
+      - name: Lakshya<br>Shastri
+        img: Lakshya_Shastri.jpeg
+        mail: lakshya.shastri@students.iiit.ac.in
+        bg: green
 
 - team: Finance
   text: "Rule No.1: Never lose money.<br> Rule No.2: Never forget rule No.1. <br> - Warren Buffet"
   heads:
-      - name: Shaurya<br>Dewan
-        bg: grey
-        img: Shaurya_2020.jpg
-        fb: https://www.facebook.com/shaurya.dewan.77
-        in: https://www.linkedin.com/in/shaurya-dewan-b022241a4
-        mail: shaurya.dewan@students.iiit.ac.in
-        phone: 9652676482
-  members:
-      - name: Harsha<br>Vardhan<br>Nemani
+      - name: Nemani<br>Harsha Vardhan
         img: NEMANI_VARDHAN.jpg
-        fb: https://www.facebook.com/profile.php?id=100054870770827
-        in: https://www.linkedin.com/in/harsha-vardhan-a088951b8
         mail: nemani.v@research.iiit.ac.in
+        bg: grey
+        phone: 9834653658
+  members:
+      - name: Amey<br>Choudhary
+        img: Amey_Choudhary.jpg
+        mail: amey.choudhary@research.iiit.ac.in
+        bg: green
+      - name: Rhythm<br>Aggarwal
+        img: Rhythm_Aggarwal.jpg
+        mail: rhythm.aggarwal@students.iiit.ac.in
         bg: green
 
 - team: Design
   text: "Design is not just what it looks like and feels like. Design is how it works. <br> - Steve Jobs"
-  members:
-      - name: Saravanan<br>Senthil
-        img: Saravanan_2021.png
-        fb: https://www.facebook.com/saru.d2
-        in: https://www.linkedin.com/in/saravanan-senthil-77b0801b4/
-        mail: saravanan.senthil@students.iiit.ac.in
-        bg: grey
+  heads:
       - name: Anjali<br>Singh
         img: Anjali_Singh.jpeg
-        fb: https://www.facebook.com/profile.php?id=100057663436291
-        in: https://www.linkedin.com/in/anjali-singh-005
         mail: anjali.s@students.iiit.ac.in
-        bg: green
+        bg: grey
+        phone: 8199994149
+  members:
       - name: Saurav<br>Chhatani
         img: Saurav_Chhatani.jpeg
-        fb: https://www.facebook.com/sauravchhatani
-        in: https://www.linkedin.com/in/saurav-chhatani-3498b81bb
         mail: saurav.chhatani@students.iiit.ac.in
-        bg: green
-      - name: Gokul<br>Praneetha
-        img: Gokul_Praneetha.jpg
-        fb: https://www.facebook.com/praneetha.gokul.5
-        in: https://www.linkedin.com/in/praneetha-gokul-2582aa188
-        mail: gokul.p@research.iiit.ac.in
-        bg: grey
-      - name: Vamshi<br>Krishna<br>Bonagiri
-        img: Vamshi_Bonagiri.jpg
-        fb: https://www.facebook.com/vamshi.bonagiri
-        in: https://www.linkedin.com/in/vamshi-krishna-bonagiri-ba221b1bb/
-        mail: vamshi.b@research.iiit.ac.in
-        bg: grey
-      - name: Eshika<br>Khandelwal
-        img: Eshika_Khandelwal.jpeg
-        fb: https://www.facebook.com/eshika04
-        in: https://www.linkedin.com/in/eshika-khandelwal-4b308b1b6/
-        mail: eshika.k@research.iiit.ac.in
         bg: green
       - name: Karmanjyot<br>Singh
         img: Karmanjyot_Singh.jpg
-        fb: https://www.facebook.com/karmanjyot.singh.5
-        in: https://www.linkedin.com/in/karmanjyot-singh-008753207
         mail: karmanjyot.singh@students.iiit.ac.in
+        bg: green
+      - name: Arpit<br>Pathak
+        img: Arpit_Pathak.jpg
+        mail: arpit.pathak@students.iiit.ac.in 
+        bg: green
+      - name: Vansh<br>Marda
+        img: Vansh_Marda.jpg
+        mail: vansh.marda@students.iiit.ac.in
+        bg: green
+      - name: Akshit<br>Kumar
+        img: Akshit_Kumar.jpeg
+        mail: akshit.kumar@research.iiit.ac.in
+        bg: green
+      - name: Gnaneswar<br>Kulindala
+        img: Gnaneswar_Kulindala.jpg
+        mail: gnaneswar.kulindala@research.iiit.ac.in
         bg: green
 
 - team: Marketing
